--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "http-server -a localhost -p 8000 -c-1 ./public"
+    "start": "watch-http-server -a localhost -p 8000 -c-1 ./public"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/wbrzosko/Angular-Portfolio#readme",
   "dependencies": {},
   "devDependencies": {
-        "http-server": "^0.9.0"    
+    "http-server": "^0.9.0",
+    "watch-http-server": "^0.7.6"
   }
 }
